feat: Update to reflect new 'staging' location

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,7 +6,7 @@
       {{ if eq hugo.Environment "production" }}
       Powered by <a href="https://pages.github.com" title="GitHub Pages">GitHub Pages</a>.
       {{ else if eq hugo.Environment "staging" }}
-      Powered by Synology Web Station.
+      Powered by Apache on macOS.
       {{ else if eq hugo.Environment "development" }}
       Development running locally.
       {{ else if eq hugo.Environment "home-lan" }}
